--- a/src/content/blog/-DUMMY-LOAD.mdx
+++ b/src/content/blog/-DUMMY-LOAD.mdx
@@ -1,15 +1,15 @@
 ---
 heroImage: /src/assets/images/screenshot-2567-04-24-at-13.40.54.png
 category: Electronic && Electrical
-description: 'การตรวจซ่อมชุดระบายความร้อน DUMMY LOAD ยี่ห้อ Blower Assembly Model : BA-300'
+description: "การตรวจซ่อมชุดระบายความร้อน DUMMY LOAD ยี่ห้อ Blower Assembly Model : BA-300"
 pubDate: 2024-05-23T17:00:00.000Z
 tags:
   - ชุมพร
-  - 'Blower Assembly Model : BA-300'
+  - "Blower Assembly Model : BA-300"
   - งานซ่อม
   - การตรวจซ่อม
   - DUMMY LOAD
-title: 'การตรวจซ่อมชุดระบายความร้อน DUMMY LOAD ยี่ห้อ Blower Assembly Model : BA-300'
+title: "การตรวจซ่อมชุดระบายความร้อน DUMMY LOAD ยี่ห้อ Blower Assembly Model : BA-300"
 ---
 
 ## การตรวจซ่อมชุดระบายความร้อน DUMMY LOAD ยี่ห้อ Blower Assembly Model : BA-300
