--- a/src/content/blog/-Level-.mdx
+++ b/src/content/blog/-Level-.mdx
@@ -8,7 +8,7 @@ tags:
   - ETL
   - เครื่องมือวัด
   - การใช้งาน
-  - ' Power Meter Sensor'
+  - " Power Meter Sensor"
   - E9321A
 title: ปรับค่าและตั้งค่า Level กำลังส่งฯ
 ---
