--- a/src/content/blog/-Parameter--Precorrection-part-1.mdx
+++ b/src/content/blog/-Parameter--Precorrection-part-1.mdx
@@ -1,15 +1,15 @@
 ---
 heroImage: /src/assets/images/Screenshot 2567-05-02 at 16.40.38.png
 category: เครื่องมือวัด
-description: 'ตรวจเช็คค่า Parameter ก่อนการทำ Precorrection part #1'
+description: "ตรวจเช็คค่า Parameter ก่อนการทำ Precorrection part #1"
 pubDate: 2022-06-30T17:00:00.000Z
 tags:
   - กรุงเทพ
   - เครื่องมือวัด
   - การใช้งาน
-  - ' Power Meter Sensor'
+  - " Power Meter Sensor"
   - E9321A
-title: 'ตรวจเช็คค่า Parameter ก่อนการทำ Precorrection part #1'
+title: "ตรวจเช็คค่า Parameter ก่อนการทำ Precorrection part #1"
 ---
 
 ## วีดีโอสาธิตการใช้งาน
