--- a/src/content/blog/-Parameter--Precorrection2.mdx
+++ b/src/content/blog/-Parameter--Precorrection2.mdx
@@ -7,7 +7,7 @@ tags:
   - กรุงเทพ
   - เครื่องมือวัด
   - การใช้งาน
-  - ' Power Meter Sensor'
+  - " Power Meter Sensor"
   - E9321A
 title: ตรวจเช็คค่า Parameter ก่อนการทำ Precorrection#2
 ---
