--- a/src/content/blog/-Parameter--Precorrection-3.mdx
+++ b/src/content/blog/-Parameter--Precorrection-3.mdx
@@ -1,15 +1,15 @@
 ---
 heroImage: /src/assets/images/Screenshot 2567-05-02 at 16.51.06.png
 category: เครื่องมือวัด
-description: 'ตรวจเช็คค่า Parameter และทำ Precorrection #3'
+description: "ตรวจเช็คค่า Parameter และทำ Precorrection #3"
 pubDate: 2024-06-11T17:00:00.000Z
 tags:
   - กรุงเทพ
   - เครื่องมือวัด
   - การใช้งาน
-  - ' Power Meter Sensor'
+  - " Power Meter Sensor"
   - E9321A
-title: 'ตรวจเช็คค่า Parameter และทำ Precorrection #3'
+title: "ตรวจเช็คค่า Parameter และทำ Precorrection #3"
 ---
 
 ## วีดีโอสาธิตการใช้งาน
