--- a/src/content/blog/-Power-Meter-Sensor.mdx
+++ b/src/content/blog/-Power-Meter-Sensor.mdx
@@ -6,7 +6,7 @@ pubDate: 2022-07-01T17:00:00.000Z
 tags:
   - เครื่องมือวัด
   - การใช้งาน
-  - ' Power Meter Sensor'
+  - " Power Meter Sensor"
   - E9321A
 title: การคำนวนก่อนก่อนใช้งาน Power Meter Sensor
 ---
