--- a/src/content/blog/astro copy 3.mdx
+++ b/src/content/blog/astro copy 3.mdx
@@ -1,16 +1,16 @@
 ---
 heroImage: /src/assets/images/Screenshot 2567-05-02 at 16.45.39.png
 category: เครื่องมือวัด
-description: 'การใช้งาน Power Meter Sensor Agilent E9321A , E4416A'
+description: "การใช้งาน Power Meter Sensor Agilent E9321A , E4416A"
 pubDate: 2022-07-01T17:00:00.000Z
 tags:
   - กรุงเทพ
   - เครื่องมือวัด
   - การใช้งาน
-  - ' Power Meter Sensor'
+  - " Power Meter Sensor"
   - E4416A
   - E9321A
-title: 'การใช้งาน Power Meter Sensor Agilent E9321A , E4416A'
+title: "การใช้งาน Power Meter Sensor Agilent E9321A , E4416A"
 ---
 
 ## วีดีโอสาธิตการใช้งาน
